[gd_scene load_steps=7 format=3 uid="uid://be0gvhmimfdwh"]

[ext_resource type="Script" path="res://battle/battle.gd" id="1_flv6j"]
[ext_resource type="Script" path="res://battle/player_stats.gd" id="2_80dl3"]
[ext_resource type="Texture2D" uid="uid://hehv3deekicm" path="res://assets/textures/dungeon.png" id="2_dmltc"]
[ext_resource type="Texture2D" uid="uid://bq8bognr5usv5" path="res://assets/textures/mobile_rpg_mockup.png" id="3_bgxaa"]
[ext_resource type="PackedScene" uid="uid://or02gjd30pjt" path="res://battle/enemy/enemy.tscn" id="4_8k0wj"]
[ext_resource type="Script" path="res://battle/stats_panel.gd" id="6_u4hy0"]

[node name="Battle" type="Node"]
script = ExtResource("1_flv6j")

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("2_80dl3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(45, 80)
texture = ExtResource("2_dmltc")

[node name="MobileRpgMockup" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(45, 80)
texture = ExtResource("3_bgxaa")

[node name="Enemy" parent="." instance=ExtResource("4_8k0wj")]
position = Vector2(46, 30)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 3.0
offset_top = 48.0
offset_right = 87.0
offset_bottom = 70.0
script = ExtResource("6_u4hy0")

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 25.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "HP
25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="APLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
offset_left = 29.0
offset_top = 2.0
offset_right = 54.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "AP
3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MPLabel" type="Label" parent="UI/StatsPanel/StatsContainer"]
layout_mode = 2
offset_left = 58.0
offset_top = 2.0
offset_right = 84.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "MP
10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButtons" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 9.0
offset_top = 73.0
offset_right = 81.0
offset_bottom = 134.0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 3
columns = 2

[node name="SwordButton" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_right = 32.0
offset_bottom = 13.0
text = "Sword"

[node name="HealButton" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_left = 40.0
offset_right = 72.0
offset_bottom = 13.0
text = "Heal"

[node name="BlockButton" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_top = 16.0
offset_right = 32.0
offset_bottom = 29.0
text = "Block"

[node name="EmptyButton" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_left = 40.0
offset_top = 16.0
offset_right = 72.0
offset_bottom = 29.0

[node name="EmptyButton2" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_top = 32.0
offset_right = 32.0
offset_bottom = 45.0

[node name="EmptyButton3" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_left = 40.0
offset_top = 32.0
offset_right = 72.0
offset_bottom = 45.0

[node name="EmptyButton4" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_top = 48.0
offset_right = 32.0
offset_bottom = 61.0

[node name="EmptyButton5" type="Button" parent="UI/ActionButtons"]
custom_minimum_size = Vector2(32, 13)
layout_mode = 2
offset_left = 40.0
offset_top = 48.0
offset_right = 72.0
offset_bottom = 61.0

[node name="TextBoxPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_top = 137.0
offset_right = 90.0
offset_bottom = 160.0

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_player_stats_mp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_enemy_died"]
[connection signal="pressed" from="UI/ActionButtons/SwordButton" to="." method="_on_sword_button_pressed"]
